# relative_navigation

./: README.md  plot_pointcloud.py  point_cloud.txt
object_det/: arcu_markers_pose_estimation.py  calibration.py  calibration_images.py  dist_coeffs.npy  generate_marker.py
orbit_simulation/orbit_simulation/models/ORBIT/: heightmap_flatfloor_data.txt  model.config  model.sdf
orbit_simulation/orbit_simulation/models/obstacle/: model.sdf
orbit_simulation/orbit_simulation/params/: bridged_topics.yaml
orbit_simulation/orbit_simulation/worlds/: orl.world
orbit_simulation/reacsa_description/: .gitattributes
orbit_simulation/reacsa_description/launch/: robot_description.launch.py
orbit_simulation/reacsa_description/urdf/: RECAP.urdf.xacro  SATSIM.urdf.xacro  gazebo.xacro
reacsa_relative_navigation/: CMakeLists.txt  package.xml
reacsa_relative_navigation/include/reacsa_relative_navigation/: clustering.cpp  clustering.h  kdtree.h  lidar_pose_estimation.h  tracking.cpp  tracking.h
reacsa_relative_navigation/src/: lidar_pose_estimation.cpp
reacsa_visualization/: CMakeLists.txt  package.xml
reacsa_visualization/include/reacsa_visualization/: visualization_publisher.hpp
reacsa_visualization/src/: visualization_publisher.cpp
report/: abstract.aux  abstract.tex  bibfile.bib  chapter_1.aux  chapter_1.tex  chapter_2.aux  chapter_2.tex  chapter_3.aux  chapter_3.tex  chapter_4.aux  chapter_4.tex  chapter_5.aux  chapter_5.tex  conclusions.aux  conclusions.tex  frontespizio.aux  frontespizio.tex  introduction.aux  introduction.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.tex  main.toc  report_template_.aux  report_template_.blg  report_template_.fdb_latexmk  report_template_.fls  report_template_.tex  report_template_.toc
report/doc/: README.md  ottimizzazioni-clustering-lidar.md
src/object_det/: camera_matrix.npy
src/orbit_simulation/orbit_simulation/models/even_floor/: model.config  model.sdf
src/orbit_simulation/orbit_simulation/models/flat_floor/: model.config  model.sdf
src/orbit_simulation/orbit_simulation/models/obstacle/: model.config
src/orbit_simulation/orbit_simulation/models/walls/: model.sdf
src/orbit_simulation/orbit_simulation/worlds/: orl_even.world
src/orbit_simulation/reacsa_description/: .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  package.xml
src/orbit_simulation/reacsa_description/urdf/: ACROBAT.urdf.xacro  REACSA.urdf.xacro
src/reacsa_bringup/: CMakeLists.txt  package.xml
src/reacsa_bringup/launch/: reacsa.launch.py
src/reacsa_relative_navigation/include/reacsa_relative_navigation/: lidar_pose_estimation.h
src/reacsa_relative_navigation/launch/: relative_navigation.launch.py
src/reacsa_visualization/config/: params.yaml
src/reacsa_visualization/launch/: reacsa.launch.py
src/reacsa_visualization/rviz/: reacsa_config.rviz
