<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>reacsa_relative_navigation</name>
 <version>0.0.0</version>
 <description>Package implementing the relative navigation for REACSA</description>
 <maintainer email="robotics@esa.int">ESA robotics</maintainer>
 <license>Open Source. Do whatever you want.</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>tf2_ros</depend>
 <depend>tf2_sensor_msgs</depend>
 <depend>pcl_conversions</depend>
 <depend>pcl_msgs</depend>
 <depend>pcl_ros</depend>
 <depend>visualization_msgs</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>