<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reacsa_visualization</name>
  <version>0.0.1</version>
  <description>Package that visualizes the reacsa with the applied wrenches in rviz</description>
  <maintainer email="marti.vilella@ext.esa.int">Marti Vilella</maintainer>
  <license>Open Source. Do whatever you want.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend> ros2launch </exec_depend>
  <exec_depend> rviz2 </exec_depend>

  <depend> ament_index_cpp </depend>
  <depend> canopen_interfaces </depend>
  <depend> orl_common </depend>
  <depend> orl_interfaces </depend>
  <depend> sensor_msgs </depend>
  <depend> tf2_geometry_msgs </depend>
  <depend> visualization_msgs </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
