<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reacsa_description</name>
  <version>0.1.4</version>
  <description>REACSA description package</description>
  <maintainer email="robotics@esa.int">ESA robotics</maintainer>
  <license>Open Source. Do whatever you want.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>orl_common</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
